# routes/userRoutes.js
@@ -4,6 +4,7 @@ const userController = require('../controllers/userController')
 const transactionController = require('../controllers/transactionControlller')
 const authenticateToken = require('../middleware/auth');
 
+
 router.post('/user_login_register', userController.userLogin);
 router.post('/verify_otp', userController.verifyOtp);
 router.post('/update_user', authenticateToken, userController.updateUser);
@@ -18,5 +19,7 @@ router.get('/get_matches', userController.getMatches);
 router.post('/add_funds_to_wallet', transactionController.addFundsToWallet);
 router.post('/withdrawl_request', transactionController.createWithdrawalRequest);
 router.get('/transaction_history', transactionController.getTransactionHistory);
+router.get('/get_rank_winning/:contestId', userController.getRankAndWinning);
+router.get('/get_leaderboard/:contestId', userController.getLeaderboard);
 
 module.exports = router;
